# anywidget-3dviewer-GLTF

./: .gitignore  README.md  hello.ipynb  package-lock.json  package.json  pyproject.toml
js/: viewer.jsx  widget.css  widget.jsx
src/anywidget_3dviewer/: __init__.py
